--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,11 @@ body {
   max-width: 1200px;
   margin: 0px auto;
 }
-h1 {
-  font-weight: 700;
-  font-size: 1.5em;
-}
 
 /* navbar */
 nav {
   height: 60px;
-  border-bottom: 2px solid black;
+  border-bottom: 1px solid black;
   position: absolute;
   width: 100%;
   background-color: #fff;
@@ -22,20 +18,18 @@ nav {
 }
 nav .container {
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   justify-content: space-between;
-  /* border-bottom: 2px solid black; */
-  z-index: auto;
 }
 .nav-logo {
-  padding-top: 4px;
+  padding-top: 0px;
 }
 .nav-menu {
   line-height: 30px;
 }
 .nav-menu ul {
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   /* background-color: black; */
   list-style-type: none;
 }
@@ -61,6 +55,22 @@ nav .container {
 }
 
 /* header */
+
+header {
+  padding: 70px 0px 20px;
+  border-bottom: 2px solid black;
+  background-image: url("../assets/img/5.jpg");
+  height: 600px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 -120px;
+  color: yellow;
+}
+.header-judul {
+  margin: 10px 0 20px;
+  line-height: 1.8em;
+}
+
 header img {
   width: 1335px;
   height: 768px;
